057 sweetalert2 position 사용하기

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-div {
+/* div {
   background-color: rgb(170, 150, 216);
   color: rgb(255, 255,255);
   padding: 40px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
-}
+} */
 
 h1 {
   color: white;
