--- a/client/src/css/new.css
+++ b/client/src/css/new.css
@@ -747,3 +747,7 @@ td.check_ty1 label:after{margin-top: 7px;}
 
 
 .mb0{margin-bottom: 0 !Important;}
+
+.border_validate_err {
+    border: 1px solid red !important;
+}
